--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta content="极简的网址导航，无广告、无干扰。" name="description" />
   <meta content="简洁导航,极简导航,简洁网址导航,极简网址导航" name="keywords" />
   <link rel="shortcut icon" href="/favicon.ico">
-  <title>简洁主页 - 无广告不干扰</title>
+  <title>简洁主页 - 让搜索更简单</title>
 </head>
 
 <body>
